--- a/html/ol_dl_ul.html
+++ b/html/ol_dl_ul.html
@@ -18,11 +18,11 @@
 <body>
     <div>
         <ul>
-            <li>bedsheet</li>
+            <li type="circle">bedsheet</li>
             <li>pillow</li>
             <li>bed</li>
         </ul>
-        <ol>
+        <ol type="a" start="5">
             <li>brush</li>
             <li>bath</li>
             <li>office</li>
