--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,10 @@
     <h2> Lorem ipsum dolor sit amet.</h2>
     <img src="https://plus.unsplash.com/premium_photo-1731860726747-13b53e6bf3de?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2fHx8ZW58MHx8fHx8" alt="">
     <a href="https://www.google.com" target="_blank">Visit Google</a>
-    <a href="#home">home</a>
+    <a>home</a>
     <a href="#service">service</a>
-    <a href="#contact">contact</a>
-    <a href="" target="_blank"></a>
+    <a href="contact">contact</a>
+    <a href="">reloads_page</a>
 <main>
     <section>
         <h2>main content</h2>
