--- a/javascript/link_funExe.html
+++ b/javascript/link_funExe.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Link</title>
-    <!-- <script src="./mahiFills.js"></script> -->
-    <script src="./flattenObj.js"></script>
+    <script src="./mahiFills.js"></script>
+    <!-- <script src="./flattenObj.js"></script> -->
     <!-- <script src="./realTime_async.js"></script> -->
     <a href="" target=""></a>
     <!-- <link rel="stylesheet" href="./css-priority.css"> -->
