--- a/DOM/kanban-board/kanban.html
+++ b/DOM/kanban-board/kanban.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task Sheet</title>
 </head>
 <link rel="stylesheet" href="./style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -21,10 +21,10 @@
         <div class="action_btn">
             <div class="add-btn">
                 <!-- font awesome icons -->
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-plus add"></i>
             </div>
             <div class="remove-btn">
-                <i class="fa-solid fa-trash"></i>
+                <i class="fa-solid fa-trash remove"></i>
             </div>
         </div>
     </div>
@@ -48,6 +48,6 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js" crossorigin="anonymous"></script>
 <script src="./kanban.js"></script>
-
 </html>
