--- a/DOM/drag_drop/tickets.html
+++ b/DOM/drag_drop/tickets.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tickets</title>
 </head>
+<link rel="icon" type="image/png" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwRMwZYLy0XuFOa5rKlDzS9UYa2aSxCBfeizDfX_GGeRCgI1gtugu9deYURx4wCOZ7UF4&usqp=CAU">
 <link rel="stylesheet" href="./tickets.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-
 <body>
 
     <div class="header">
@@ -40,14 +40,6 @@
     </div>
 
     <div class="main-content">
-         <!-- <div class="ticket-container">
-            <div class="ticket-header lightSlateGray"></div>
-            <div class="ticket-id">id</div>
-            <div class="ticket-info">task info</div>
-            <div class="ticket-lock">
-                <i class="fa-solid fa-lock" id="lock"></i>
-            </div>
-        </div> -->
     </div>
     <div class="modal-content">
         <div class="text-area">
@@ -61,8 +53,8 @@
         </div>
     </div>
 </body>
-<script src="./tickets.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js"
     crossorigin="anonymous"></script>
+<script src="./tickets.js"></script>
 
 </html>
