--- a/DOM/eventBubblingVsEventHandling.html
+++ b/DOM/eventBubblingVsEventHandling.html
@@ -49,9 +49,9 @@
         // e.stopPropagation();
     });
 
-    // btn.addEventListener("click", (e) => {
-    //     console.log("btn is clicked");
-    // });
+    btn.addEventListener("click", (e) => {
+        console.log("btn is clicked");
+    });
 </script>
 
 </html>
